[package]
name = "relay_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
behaviour = { workspace = true }
tokio = { workspace = true, features = ["full"] }
libp2p = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
codec = { workspace = true }
tracing = { workspace = true }